@@ -57,6 +57,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 2333) Redirects are properly rendered when previewing an edit.
 * (bug 14972) Use localized alias of Special:Search on all search forms
 * (bug 11035) Special:Search should have descriptive <title>
+* (bug 15052) Skins should add their name as a class in <body>
 
 === API changes in 1.14 ===
 
